# Job-Applications-Multi-Ai-Agents

./: README.md  env.example  pyproject.toml  requirements.txt  setup.sh  start.sh  stop.sh  update_profile.sh
config/: config.yaml  user_profile.yaml
data/: mock_jobs.json
data/backups/: README.md
data/user/: experience.md  motivations.md
docs/: DOCUMENTATION.md
src/: __init__.py  main.py
src/agents/: __init__.py  base_agent.py  cover_letter_agent.py  cv_customizer_agent.py  profile_updater_agent.py
src/consumers/: __init__.py  kafka_consumer.py
src/models/: __init__.py  job_offer.py
src/services/: __init__.py  cv_parser_service.py  gmail_service.py  language_detector.py  latex_service.py  llm_service.py
src/utils/: __init__.py  config.py  logger.py  shutdown_manager.py
templates/: cover_letter_en.tex  cover_letter_fr.tex  cv_en.tex  cv_fr.tex  email_templates.json
uploads/: README.md
